--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -27,7 +27,7 @@ jobs:
       - uses: actions/checkout@v2
       - name: build
         run: |
-          docker buildx build -pull --platform linux/amd64,linux/arm64 .
+          docker buildx build --pull --platform linux/amd64,linux/arm64 .
         working-directory: ${{ matrix.dictionary }}/${{ matrix.distribution }}
 
       - name: Publish to DockerHub
