--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -41,7 +41,7 @@ jobs:
           PASSWORD: ${{ secrets.DOCKERHUB_PASSWORD }}
 
       - name: Publish to GitHub Packages Container registry
-        run:
+        run: |
           printenv PASSWORD | docker login ghcr.io --username "$USERNAME" --password-stdin
           docker buildx build --push --platform linux/amd64,linux/arm64 -t ghcr.io/$USERNAME/mecab:${{ matrix.dictionary }}-${{ matrix.distribution }} .
           docker logout
