add bullseye to the build matrix

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -18,6 +18,8 @@ jobs:
           - alpine3.14
           - buster
           - slim-buster
+          - bullseye
+          - slim-bullseye
         dictionary:
           - ipadic
           - jumandic
