--- a/cloudformation/ecr.yml
+++ b/cloudformation/ecr.yml
@@ -49,6 +49,13 @@ Resources:
           - jumandic-alpine3.12
           - jumandic-alpine3.11
 
+          # License
+
+          Dockerfiles are available under [the MIT License](https://github.com/shogo82148/mecab-docker/blob/main/LICENSE)
+
+          These images contain MeCab, ipadic, and jumandic.
+          The license information can be found in [CREDITS](https://github.com/shogo82148/mecab-docker/blob/main/CREDITS).
+
         UsageText: |
           # Usage
 
