introduce debian bookworm

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -12,14 +12,16 @@ jobs:
       fail-fast: false
       matrix:
         distribution:
-          - alpine3.11
-          - alpine3.12
-          - alpine3.13
-          - alpine3.14
-          - buster
-          - slim-buster
+          - bookworm
+          - slim-bookworm
           - bullseye
           - slim-bullseye
+          - buster
+          - slim-buster
+          - alpine3.14
+          - alpine3.13
+          - alpine3.12
+          - alpine3.11
         dictionary:
           - ipadic
           - jumandic
