add Alpine v3.15 based images

--- a/cloudformation/ecr.yml
+++ b/cloudformation/ecr.yml
@@ -38,6 +38,7 @@ Resources:
           - ipadic-slim-bullseye
           - ipadic-buster
           - ipadic-slim-buster
+          - ipadic-alpine3.15
           - ipadic-alpine3.14
           - ipadic-alpine3.13
           - ipadic-alpine3.12
@@ -48,6 +49,7 @@ Resources:
           - jumandic-slim-bullseye
           - jumandic-buster
           - jumandic-slim-buster
+          - jumandic-alpine3.15
           - jumandic-alpine3.14
           - jumandic-alpine3.13
           - jumandic-alpine3.12
