--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -18,6 +18,7 @@ jobs:
           - slim-bullseye
           - buster
           - slim-buster
+          - alpine3.15
           - alpine3.14
           - alpine3.13
           - alpine3.12
