--- a/ipadic/bookworm/Dockerfile
+++ b/ipadic/bookworm/Dockerfile
@@ -1,7 +1,4 @@
-FROM debian:bookworm
-
-# XXX: buildpack-deps:bookworm is not yet available.
-# FROM buildpack-deps:bookworm
+FROM buildpack-deps:bookworm
 
 ENV MECAB_VERSION 0.996.6
 ENV IPADIC_VERSION 2.7.0-20070801
