--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -23,6 +23,7 @@ jobs:
           - slim-bullseye
           - buster
           - slim-buster
+          - alpine3.18
           - alpine3.17
           - alpine3.16
         dictionary:
