--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,14 +9,96 @@ updates:
     schedule:
       interval: "daily"
 
+  ###### ipadic ######
+
   - package-ecosystem: "docker"
-    directory: "/"
+    directory: "ipadic/alpine3.18"
     schedule:
       interval: "daily"
-    groups:
-      alpine:
-        patterns:
-          - "alpine:*"
-      debian:
-        patterns:
-          - "debian:*"
+
+  - package-ecosystem: "docker"
+    directory: "ipadic/alpine3.17"
+    schedule:
+      interval: "daily"
+
+  - package-ecosystem: "docker"
+    directory: "ipadic/alpine3.16"
+    schedule:
+      interval: "daily"
+
+  - package-ecosystem: "docker"
+    directory: "ipadic/bookworm"
+    schedule:
+      interval: "daily"
+
+  - package-ecosystem: "docker"
+    directory: "ipadic/bullseye"
+    schedule:
+      interval: "daily"
+
+  - package-ecosystem: "docker"
+    directory: "ipadic/buster"
+    schedule:
+      interval: "daily"
+
+  - package-ecosystem: "docker"
+    directory: "ipadic/slim-bookworm"
+    schedule:
+      interval: "daily"
+
+  - package-ecosystem: "docker"
+    directory: "ipadic/slim-bullseye"
+    schedule:
+      interval: "daily"
+
+  - package-ecosystem: "docker"
+    directory: "ipadic/slim-buster"
+    schedule:
+      interval: "daily"
+
+  ###### jumandic ######
+
+  - package-ecosystem: "docker"
+    directory: "jumandic/alpine3.18"
+    schedule:
+      interval: "daily"
+
+  - package-ecosystem: "docker"
+    directory: "jumandic/alpine3.17"
+    schedule:
+      interval: "daily"
+
+  - package-ecosystem: "docker"
+    directory: "jumandic/alpine3.16"
+    schedule:
+      interval: "daily"
+
+  - package-ecosystem: "docker"
+    directory: "jumandic/bookworm"
+    schedule:
+      interval: "daily"
+
+  - package-ecosystem: "docker"
+    directory: "jumandic/bullseye"
+    schedule:
+      interval: "daily"
+
+  - package-ecosystem: "docker"
+    directory: "jumandic/buster"
+    schedule:
+      interval: "daily"
+
+  - package-ecosystem: "docker"
+    directory: "jumandic/slim-bookworm"
+    schedule:
+      interval: "daily"
+
+  - package-ecosystem: "docker"
+    directory: "jumandic/slim-bullseye"
+    schedule:
+      interval: "daily"
+
+  - package-ecosystem: "docker"
+    directory: "jumandic/slim-buster"
+    schedule:
+      interval: "daily"
