--- a/.github/workflows/ipadic-alpine3.16.yml
+++ b/.github/workflows/ipadic-alpine3.16.yml
@@ -25,4 +25,4 @@ jobs:
         with:
           perl-version: "5.38"
       - run: |
-          ./scripts/build.sh ipadic alpine3.16
+          ./scripts/build.pl ipadic alpine3.16
