--- a/.github/workflows/ipadic-bullseye.yml
+++ b/.github/workflows/ipadic-bullseye.yml
@@ -25,4 +25,4 @@ jobs:
         with:
           perl-version: "5.38"
       - run: |
-          ./scripts/build.sh ipadic bullseye
+          ./scripts/build.pl ipadic bullseye
