--- a/.github/workflows/jumandic-bullseye.yml
+++ b/.github/workflows/jumandic-bullseye.yml
@@ -25,4 +25,4 @@ jobs:
         with:
           perl-version: "5.38"
       - run: |
-          ./scripts/build.sh jumandic bullseye
+          ./scripts/build.pl jumandic bullseye
