--- a/.github/workflows/jumandic-buster.yml
+++ b/.github/workflows/jumandic-buster.yml
@@ -25,4 +25,4 @@ jobs:
         with:
           perl-version: "5.38"
       - run: |
-          ./scripts/build.sh jumandic buster
+          ./scripts/build.pl jumandic buster
