--- a/.github/workflows/jumandic-slim-bookworm.yml
+++ b/.github/workflows/jumandic-slim-bookworm.yml
@@ -25,4 +25,4 @@ jobs:
         with:
           perl-version: "5.38"
       - run: |
-          ./scripts/build.sh jumandic slim-bookworm
+          ./scripts/build.pl jumandic slim-bookworm
