Update script to use update_mecab.pl

--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -23,7 +23,7 @@ jobs:
       - id: update
         name: update
         run: |
-          ./scripts/update.pl
+          ./scripts/update_mecab.pl
         env:
           GH_TOKEN: ${{ github.token }}
 
