add alpine 3.19 to depndabot config

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -12,6 +12,14 @@ updates:
   ###### ipadic ######
 
   - package-ecosystem: "docker"
+    directory: "ipadic/alpine3.19"
+    schedule:
+      interval: "daily"
+    ignore:
+      - dependency-name: "*"
+        update-types: [version-update:semver-major, version-update:semver-minor]
+
+  - package-ecosystem: "docker"
     directory: "ipadic/alpine3.18"
     schedule:
       interval: "daily"
@@ -66,6 +74,14 @@ updates:
       interval: "daily"
 
   ###### jumandic ######
+
+  - package-ecosystem: "docker"
+    directory: "jumandic/alpine3.19"
+    schedule:
+      interval: "daily"
+    ignore:
+      - dependency-name: "*"
+        update-types: [version-update:semver-major, version-update:semver-minor]
 
   - package-ecosystem: "docker"
     directory: "jumandic/alpine3.18"
