use directory beta parameter
ref. https://github.blog/changelog/2024-04-29-dependabot-multi-directory-configuration-public-beta-now-available/

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,130 +9,11 @@ updates:
     schedule:
       interval: "daily"
 
-  ###### ipadic ######
-
+  # Maintain docker base images
   - package-ecosystem: "docker"
-    directory: "ipadic/alpine3.19"
+    directories: "**"
     schedule:
       interval: "daily"
     ignore:
       - dependency-name: "*"
         update-types: [version-update:semver-major, version-update:semver-minor]
-
-  - package-ecosystem: "docker"
-    directory: "ipadic/alpine3.18"
-    schedule:
-      interval: "daily"
-    ignore:
-      - dependency-name: "*"
-        update-types: [version-update:semver-major, version-update:semver-minor]
-
-  - package-ecosystem: "docker"
-    directory: "ipadic/alpine3.17"
-    schedule:
-      interval: "daily"
-    ignore:
-      - dependency-name: "*"
-        update-types: [version-update:semver-major, version-update:semver-minor]
-
-  - package-ecosystem: "docker"
-    directory: "ipadic/alpine3.16"
-    schedule:
-      interval: "daily"
-    ignore:
-      - dependency-name: "*"
-        update-types: [version-update:semver-major, version-update:semver-minor]
-
-  - package-ecosystem: "docker"
-    directory: "ipadic/bookworm"
-    schedule:
-      interval: "daily"
-
-  - package-ecosystem: "docker"
-    directory: "ipadic/bullseye"
-    schedule:
-      interval: "daily"
-
-  - package-ecosystem: "docker"
-    directory: "ipadic/buster"
-    schedule:
-      interval: "daily"
-
-  - package-ecosystem: "docker"
-    directory: "ipadic/slim-bookworm"
-    schedule:
-      interval: "daily"
-
-  - package-ecosystem: "docker"
-    directory: "ipadic/slim-bullseye"
-    schedule:
-      interval: "daily"
-
-  - package-ecosystem: "docker"
-    directory: "ipadic/slim-buster"
-    schedule:
-      interval: "daily"
-
-  ###### jumandic ######
-
-  - package-ecosystem: "docker"
-    directory: "jumandic/alpine3.19"
-    schedule:
-      interval: "daily"
-    ignore:
-      - dependency-name: "*"
-        update-types: [version-update:semver-major, version-update:semver-minor]
-
-  - package-ecosystem: "docker"
-    directory: "jumandic/alpine3.18"
-    schedule:
-      interval: "daily"
-    ignore:
-      - dependency-name: "*"
-        update-types: [version-update:semver-major, version-update:semver-minor]
-
-  - package-ecosystem: "docker"
-    directory: "jumandic/alpine3.17"
-    schedule:
-      interval: "daily"
-    ignore:
-      - dependency-name: "*"
-        update-types: [version-update:semver-major, version-update:semver-minor]
-
-  - package-ecosystem: "docker"
-    directory: "jumandic/alpine3.16"
-    schedule:
-      interval: "daily"
-    ignore:
-      - dependency-name: "*"
-        update-types: [version-update:semver-major, version-update:semver-minor]
-
-  - package-ecosystem: "docker"
-    directory: "jumandic/bookworm"
-    schedule:
-      interval: "daily"
-
-  - package-ecosystem: "docker"
-    directory: "jumandic/bullseye"
-    schedule:
-      interval: "daily"
-
-  - package-ecosystem: "docker"
-    directory: "jumandic/buster"
-    schedule:
-      interval: "daily"
-
-  - package-ecosystem: "docker"
-    directory: "jumandic/slim-bookworm"
-    schedule:
-      interval: "daily"
-
-  - package-ecosystem: "docker"
-    directory: "jumandic/slim-bullseye"
-    schedule:
-      interval: "daily"
-
-  - package-ecosystem: "docker"
-    directory: "jumandic/slim-buster"
-    schedule:
-      interval: "daily"
