--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -12,6 +12,7 @@ updates:
   # Maintain docker base images
   - package-ecosystem: "docker"
     directories:
+      - "ipadic/alpine3.20"
       - "ipadic/alpine3.19"
       - "ipadic/alpine3.18"
       - "ipadic/alpine3.17"
@@ -22,6 +23,7 @@ updates:
       - "ipadic/slim-bookworm"
       - "ipadic/slim-bullseye"
       - "ipadic/slim-buster"
+      - "jumandic/alpine3.20"
       - "jumandic/alpine3.19"
       - "jumandic/alpine3.18"
       - "jumandic/alpine3.17"
